# Frankinator

./: Frankinator.spec  launch.py  main.py  pyproject.toml  web.py
.github/workflows/: build-windows.yml
